<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">陋习管理</string>
    <string name="action_settings">设置</string>
    <string name="title_crime_activity">陋习</string>
    <string name="title_crime_fragment_list">陋习列表</string>

    <string name="title_crime_date_picker">发生时间</string>

    <!-- Crime 字段说明 -->
    <string name="crime_title_label">标题</string>
    <string name="crime_title_hint">请输入陋习说明</string>
    <string name="crime_other_option">其它选项</string>
    <string name="crime_date_hint">发生时间</string>
    <string name="crime_solved">是否已解决？</string>
</resources>
